# linky

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: cmake.yml
Linky/: CMakeLists.txt
Linky/src/core/: core.cpp  core.hpp  typedefs.h
Linky/src/core/config/: project_setting.cpp  project_setting.hpp
Linky/src/core/ecs/: component.hpp  event.hpp
Linky/src/core/error/: errordefs.hpp
Linky/src/core/io/: image.cpp  image.hpp  image_loader.cpp  image_loader.hpp  logger.hpp
Linky/src/core/math/: math.cpp  math.hpp  math_defs.hpp  vector.hpp
Linky/src/core/object/: object.cpp  object.hpp  object_id.cpp  object_id.hpp
Linky/src/core/os/: keyboard.hpp  time.hpp
Linky/src/core/string/: string.hpp
Linky/src/core/template/: ref.hpp
Linky/src/core/templates/: ref.hpp
Linky/src/core/uuid/: uuid.cpp
Linky/src/core/variant/: callable.hpp  variant.cpp  variant.hpp
Linky/src/screen/graphics/: camera.hpp  light.hpp  mesh.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp
Linky/src/screen/main/: application.hpp  window.cpp  window.hpp
Linky/src/screen/resources/: material.hpp  texture.hpp
LinkyEditor/: CMakeLists.txt  editor.hpp  main.cpp
cmake/: compiler.cmake  version.hpp.in  warnings.cmake
editor/: CMakeLists.txt  editor.hpp  main.cpp
engine/: CMakeLists.txt
engine/core/: CMakeLists.txt  core.cpp  core.hpp  platform.hpp  typedefs.hpp  version.hpp.in
engine/core/concurrency/: CMakeLists.txt  concurrency.md  thread_pool.cpp  thread_pool.hpp
engine/core/config/: config.hpp  engine.cpp  engine.hpp  project_settings.cpp  project_settings.hpp
engine/core/debug/: CMakeLists.txt  debug.md  logger.cpp  logger.hpp  profiler.cpp  profiler.hpp
engine/core/debugger/: debugger_profiler.hpp
engine/core/ecs/: CMakeLists.txt  entity.hpp
engine/core/error/: assert.hpp  errordefs.hpp
engine/core/file/: CMakeLists.txt  file.cpp  file.hpp  file_stream.cpp  file_stream.hpp
engine/core/input/: input.hpp  input_event.hpp
engine/core/io/: file_stream.cpp  file_stream.hpp  image.cpp  image.hpp  image_loader.cpp  image_loader.hpp  json.hpp  logger.cpp  logger.hpp  resource.cpp  resource.hpp  serializable.hpp
engine/core/math/: CMakeLists.txt  color.hpp  math.cpp  math.hpp  math.md  math_defs.hpp  math_utils.cpp  math_utils.hpp  random.hpp  uuid_generator.hpp  vector.hpp
engine/core/object/: object.cpp  object.hpp  object_id.cpp  object_id.hpp
engine/core/os/: keyboard.hpp  keycode.hpp  main_loop.cpp  main_loop.hpp  os.hpp  thread.hpp  thread_pool.cpp  thread_pool.hpp  time.hpp
engine/core/parser/: CMakeLists.txt  parser.hpp  parser.md  parser_ini.hpp
engine/core/parser/test/: test.cpp
engine/core/profiler/: CMakeLists.txt  profiler.cpp  profiler.hpp  profiler.md
engine/core/reflection/: CMakeLists.txt  reflection.h  reflection.md  reflection_enum.hpp  registration.h
engine/core/reflection/include/: reflection_enum.hpp  registration.h
engine/core/reflection/test/: test.cpp
engine/core/serialization/: CMakeLists.txt  serialization.md
engine/core/settings/: config.hpp  engine.cpp
engine/core/string/: CMakeLists.txt  string.hpp  string_utils.hpp
engine/core/templates/: CMakeLists.txt  noncopyable.hpp  noncreateable.hpp  ref.hpp  singleton.hpp
engine/core/uuid/: CMakeLists.txt  uuid_generator.hpp
engine/core/variant/: callable.hpp  dictionary.hpp  event.hpp  variant.cpp  variant.hpp
engine/screen/graphics/: mesh.hpp  model.cpp
engine/screen/main/: window.cpp  window.hpp
engine/screen/resources/: texture.hpp
src/: CMakeLists.txt
src/core/config/: project_setting.hpp
src/core/math/: math.cpp
src/core/object/: object_id.cpp
src/core/os/: time.hpp
src/core/variant/: callable.hpp  dictionary.hpp
src/screen/graphics/: camera.hpp  light.hpp  mesh.hpp  model.hpp  shader.cpp  shader.hpp
src/screen/main/: application.cpp  application.hpp  window.cpp
src/screen/resources/: texture.hpp
test/: CMakeLists.txt  hello_test.cpp
test/core/: CMakeLists.txt  test_version.cpp
test/core/concurrency/: CMakeLists.txt  test_thread_pool.cpp
test/core/config/: project_setting_test.cpp  test_engine.cpp  test_project_settings.cpp
test/core/debug/: CMakeLists.txt  test_logger.cpp  test_profiler.cpp
test/core/debugger/: test_debugger_profiler.cpp
test/core/error/: test_errordefs.cpp
test/core/file/: CMakeLists.txt  test_file.cpp
test/core/io/: test_image.cpp  test_image_loader.cpp  test_logger.cpp  test_resource.cpp
test/core/math/: CMakeLists.txt  math_test.cpp  test_math.cpp
test/core/object/: object_id_test.cpp  test_object.cpp
test/core/os/: test_thread_pool.cpp  time_test.cpp
test/core/parser/: CMakeLists.txt  test_parser.cpp
test/core/profiler/: CMakeLists.txt  test_profiler.cpp
test/core/reflection/: CMakeLists.txt  test_reflection_enum.cpp
test/core/serialization/: CMakeLists.txt  test_serialization.cpp
test/core/string/: CMakeLists.txt  string_test.cpp  test_string_utils.cpp
test/core/templates/: test_noncopyable.cpp  test_singleton.cpp
test/core/variant/: test_variant.cpp
