include(glm)
include(eigen)
target_link_libraries(linky_core
    PUBLIC
        external::glm
        external::eigen
)

target_sources(linky_core
    PUBLIC
        color.hpp
        math.hpp
        math_defs.hpp
        math_utils.hpp
        random.hpp
    PRIVATE
        math.cpp
        math_utils.cpp
)
